# reverse-byte-ordering

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  reverse_byte_ordering.c
